修复index.html不规范的标签 完成整个demo
注意重新运行时会重新插入数据，所以重新运行时要注意把生成的db文件删除

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <form th:action="@{/logout}" method="post">
-        <input type="submit" value="注销">
+        <input type="submit" value="注销"/>
     </form>
 </div> <!-- /container -->
 
